# Life-Coach-AI-Assistant

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
configs/: accessibility.yaml  app.yaml  data.yaml  eval.yaml  logging.yaml  model.yaml  nudge.yaml  plan.yaml  ppo.yaml  risk.yaml
scripts/: gen_synth_data.py  prep_oasst.py
src/: infernce.py  settings.py
src/data/: collators.py  make_dataset.py  offline_cache.py  providers.py  rm_dataset.py  schema.py  sft_dataset.py  split_sft.py  synth_seed.py  transforms.py
src/metrics/: eval.py
src/model/: seq2seq.py  sft_dataset.py  tokenizer.py  training.py
src/model/pretokenizer/: pretokenize.py
src/model/rlhf/: ppo_train.py  reward_model.py
src/schedule/: rank.py  reschedule.py
src/utils/: logging.py  make_rm_pairs.py  pipeline.py
tests/: test_tokenizer_format.py
