[tool.poetry]
name="life-coach"
version = "0.1.0"
description = "AI assistant that plans and nudges users towards goals with adaptive scheduling and recovery."
authors = ["Dylan Figueredo <dfigueredo@hawk.illinoistech.edu>", "Jon Wu <@hawk.illinoistech.edu>", "Dhruv Ojha <@hawk.illinoistech.edu>", "Raunak Ali Syed <@hawk.illinoistech.edu>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "data", from = "src" },
  { include = "model", from = "src" },
  { include = "scripts", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pydantic = "^2.9.0"
sqlmodel = "^0.0.22"
psycopg2-binary = "^2.9.9"
redis = "^5.1.1"
apscheduler = "^3.10.4"
hydra-core = "^1.3.2"
mlflow = "^2.15.0"
requests = "^2.32.3"
httpx = "^0.27.0"
pyyaml = "^6.0.2"
loguru = "^0.7.2"
transformers = "^4.56.2" 
datasets = "^2.21.0"
accelerate = "^0.34.2"
peft = "^0.12.0"
trl = "^0.9.6"
evaluate = "^0.4.2"
scikit-learn = "^1.5.2"
tqdm = "^4.66.5"
tokenizers = ">=0.22,<0.24"
bitsandbytes = {version = "^0.43.3", optional = true, markers = "platform_system != 'Windows'"}

[tool.poetry.extras]
cuda = ["bitsandbytes"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
ruff = "^0.6.7"
black = "^24.8.0"
isort = "^5.13.2"
pre-commit = "^3.8.0"

[tool.poetry.scripts]
lc-synth = "data.synth_seed:main"
lc-make-datasets = "data.make_dataset:main"
lc-split-sft = "data.split_sft:main"
lc-data-all = "scripts.pipeline:main"
lc-train = "model.training:main"
lc-eval = "eval:main"

[tool.ruff]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"